@@ -1,3 +1,8 @@
+2005-12-28  Sven Panne  <sven.panne@aedion.de>
+
+	* src/arch/alsa/alsa.c, src/arch/i386/x86_cpu_caps_prk.c: _alDebug
+	already adds newlines.
+
 2005-12-27  Sven Panne  <sven.panne@aedion.de>
 
 	* src/arch/alsa/alsa.c: Always use "_near" variants of
